K8S/instituto-nodeport-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: institutopuertonodo-service
spec:
  type: NodePort
  selector:
    app: nombrecitoservice
  ports:
    - name: nombrecitoservice
      protocol: TCP
      port: 80
      targetPort: 80
