K8S/nombrecito-nodepoint-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nombrecitopuertonodo-service
spec:
  type: NodePort
  selector:
    app: nombrecitoservice
  ports:
    - name: nombrecitoservice
      protocol: TCP
      port: 80
      targetPort: 80
