K8S/rabbitmq-deploy.yaml
apiVersion: apps/v1
kind: Deployment 
metadata:
  name: rabbitmq-deploy
spec:
  replicas: 1
  selector:
    matchLabels:
      app: rabbitmq
  template:
    metadata: 
      labels:
        app: rabbitmq
    spec:
      containers:
        - name: rabbitmq
          image: rabbitmq:3.10.7-management
          ports: 
            - containerPort: 15672
              name: port-rabbit-mgr
            - containerPort: 5672
              name: port-rabbit-msj
---
apiVersion: v1
kind: Service
metadata:
  name: rabbitmq-clusterip-service
spec:
  type: ClusterIP
  selector:  
    app: rabbitmq
  ports:
    - name: port-rabbit-mgr
      protocol: TCP 
      port: 15672
      targetPort: 15672
    - name: port-rabbit-msj
      protocol: TCP
      port: 5672 
      targetPort: 5672
---
apiVersion: v1
kind: Service
metadata:
  name: rabbitmq-loadbalancer-service
spec:
  type: LoadBalancer
  selector:
    app: rabbitmq
  ports:
  - name: port-rabbit-mgr
    protocol: TCP
    port: 15672
    targetPort: 15672
  - name: port-rabbit-msj
    protocol: TCP
    port: 5672   
    targetPort: 5672
